added small logo

--- a/project-summary.html
+++ b/project-summary.html
@@ -27,7 +27,7 @@
           <div id="banner">
         <div class="pull-left">
                                 <div id="bannerLeft">
-                                                                                        <img src="http://maven.apache.org/images/apache-maven-project-2.png" />
+                                                                                        <img src="http://citlab.github.io/Intercloud/images/intercloud-logo-small.png" />
                 </div>
                       </div>
         <div class="pull-right">              <div id="bannerRight">
@@ -212,7 +212,7 @@
 <th>Value</th></tr>
 <tr class="b">
 <td>Name</td>
-<td>intercloud</td></tr>
+<td>Intercloud</td></tr>
 <tr class="a">
 <td>Description</td>
 <td>-</td></tr>
