--- a/dependencies.html
+++ b/dependencies.html
@@ -27,7 +27,7 @@
           <div id="banner">
         <div class="pull-left">
                                 <div id="bannerLeft">
-                                                                                        <img src="http://maven.apache.org/images/apache-maven-project-2.png" />
+                                                                                        <img src="http://citlab.github.io/Intercloud/images/intercloud-logo-small.png" />
                 </div>
                       </div>
         <div class="pull-right">              <div id="bannerRight">
@@ -268,17 +268,17 @@
 <div class="section">
 <h3>Dependency Tree<a name="Dependency_Tree"></a></h3>
 <ul>
-<li>de.tu_berlin.cit:intercloud:pom:0.0.1 <img id="_976477097" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1940017549', '_976477097' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1940017549" style="display:none">
+<li>de.tu_berlin.cit:intercloud:pom:0.0.1 <img id="_2106455301" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1260982165', '_2106455301' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1260982165" style="display:none">
 <table border="0" class="table table-striped">
 <tr class="a">
-<th>intercloud</th></tr>
+<th>Intercloud</th></tr>
 <tr class="b">
 <td>
 <p><b>Description: </b>There is currently no description associated with this project.</p>
 <p><b>URL: </b><a class="externalLink" href="https://github.com/citlab/Intercloud">https://github.com/citlab/Intercloud</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></p></td></tr></table></div>
 <ul>
-<li>org.slf4j:slf4j-api:jar:1.7.10 (compile) <img id="_2003137945" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_52941025', '_2003137945' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_52941025" style="display:none">
+<li>org.slf4j:slf4j-api:jar:1.7.10 (compile) <img id="_1116006136" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1994633795', '_1116006136' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1994633795" style="display:none">
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>SLF4J API Module</th></tr>
@@ -287,7 +287,7 @@
 <p><b>Description: </b>The slf4j API</p>
 <p><b>URL: </b><a class="externalLink" href="http://www.slf4j.org">http://www.slf4j.org</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p></td></tr></table></div></li>
-<li>org.slf4j:slf4j-simple:jar:1.7.10 (test) <img id="_222091969" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1650018641', '_222091969' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1650018641" style="display:none">
+<li>org.slf4j:slf4j-simple:jar:1.7.10 (test) <img id="_956865914" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_458792324', '_956865914' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_458792324" style="display:none">
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>SLF4J Simple Binding</th></tr>
@@ -297,7 +297,7 @@
 <p><b>URL: </b><a class="externalLink" href="http://www.slf4j.org">http://www.slf4j.org</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p></td></tr></table></div>
 <ul>
-<li>org.slf4j:slf4j-api:jar:1.7.10 (test) <img id="_1427882132" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1681154345', '_1427882132' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1681154345" style="display:none">
+<li>org.slf4j:slf4j-api:jar:1.7.10 (test) <img id="_983162588" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1114895219', '_983162588' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1114895219" style="display:none">
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>SLF4J API Module</th></tr>
@@ -306,7 +306,7 @@
 <p><b>Description: </b>The slf4j API</p>
 <p><b>URL: </b><a class="externalLink" href="http://www.slf4j.org">http://www.slf4j.org</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p></td></tr></table></div></li></ul></li>
-<li>junit:junit:jar:4.6 (test) <img id="_1219379961" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1744453003', '_1219379961' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1744453003" style="display:none">
+<li>junit:junit:jar:4.6 (test) <img id="_1269057583" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_275133497', '_1269057583' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_275133497" style="display:none">
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>JUnit</th></tr>
@@ -318,7 +318,7 @@
 <div class="section">
 <h2>Licenses<a name="Licenses"></a></h2>
 <p><b>MIT License: </b>SLF4J API Module, SLF4J Simple Binding</p>
-<p><b>Apache License, Version 2.0: </b>intercloud</p>
+<p><b>Apache License, Version 2.0: </b>Intercloud</p>
 <p><b>Common Public License Version 1.0: </b>JUnit</p></div><a name="Dependency_File_Details"></a>
 <div class="section">
 <h2>Dependency File Details<a name="Dependency_File_Details"></a></h2>
