--- a/source-repository.html
+++ b/source-repository.html
@@ -27,7 +27,7 @@
           <div id="banner">
         <div class="pull-left">
                                 <div id="bannerLeft">
-                                                                                        <img src="http://maven.apache.org/images/apache-maven-project-2.png" />
+                                                                                        <img src="http://citlab.github.io/Intercloud/images/intercloud-logo-small.png" />
                 </div>
                       </div>
         <div class="pull-right">              <div id="bannerRight">
@@ -203,8 +203,26 @@
         <div id="bodyColumn"  class="span9" >
                                   
             <div class="section">
-<h2>Source Repository<a name="Source_Repository"></a></h2><a name="Source_Repository"></a>
-<p>No source configuration management system is defined. Please check back at a later date.</p></div>
+<h2>Overview<a name="Overview"></a></h2><a name="Overview"></a>
+<p>This project uses a Source Content Management System to manage its source code.</p></div>
+<div class="section">
+<h2>Web Access<a name="Web_Access"></a></h2><a name="Web_Access"></a>
+<p>The following is a link to the online source repository.</p>
+<div class="source">
+<pre><a class="externalLink" href="https://github.com/citlab/Intercloud">https://github.com/citlab/Intercloud</a></pre></div></div>
+<div class="section">
+<h2>Anonymous access<a name="Anonymous_access"></a></h2><a name="Anonymous_access"></a>
+<p>Refer to the documentation of the SCM used for more information about anonymously check out. The connection url is:</p>
+<div class="source">
+<pre>git:git://github.com/citlab/Intercloud.git</pre></div></div>
+<div class="section">
+<h2>Developer access<a name="Developer_access"></a></h2><a name="Developer_access"></a>
+<p>Refer to the documentation of the SCM used for more information about developer check out. The connection url is:</p>
+<div class="source">
+<pre>git:git@github.com:citlab/Intercloud.git</pre></div></div>
+<div class="section">
+<h2>Access from behind a firewall<a name="Access_from_behind_a_firewall"></a></h2><a name="Access_from_behind_a_firewall"></a>
+<p>Refer to the documentation of the SCM used for more information about access behind a firewall.</p></div>
                   </div>
             </div>
           </div>
