basic xmpp login

--- a/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/auth/LogoutPage.html
+++ b/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/auth/LogoutPage.html
@@ -3,7 +3,7 @@
     <h2>Goodbye!</h2>    
     <p>
     <wicket:link>
-        <a href="OpenIdLoginPage.html">Click here to Login.</a>
+        <a href="LoginPage.html">Click here to Login.</a>
     </wicket:link>
 
 </wicket:extend>
