--- a/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/content/CredentialsPage.html
+++ b/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/content/CredentialsPage.html
@@ -16,7 +16,7 @@
 <p>Feel free to change the account information and the password whenever you want.</p>
 
 <div wicket:id="feedback"></div>
-<form wicket:id="passwordForm">
+<!--form wicket:id="passwordForm">
 	<table class="dataview">
 		<tr>
 			<td><span>Old Password</span></td>
@@ -32,6 +32,6 @@
 		</tr>
 	</table>
 	<input type="submit" value="Change Password" />
-</form>
+</form-->
 
 </wicket:extend>
