login with jabber id and forget password after login

--- a/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/auth/LoginPage.html
+++ b/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/auth/LoginPage.html
@@ -1,59 +1,5 @@
 <wicket:extend>
-
-    <h2>Sign In</h2>
-
-    <form wicket:id="loginForm">
-        <h3>XMPP login</h3>
-        <br/>
-        <table border="0">
-            <tr>
-                <td>
-                    <label>Username: </label>
-                </td>
-                <td>
-                    <input type="text" wicket:id="username"/>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label>Password: </label>
-                </td>
-                <td>
-                    <input type="password" wicket:id="password"/>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label>Service: </label>
-                </td>
-                <td>
-                    <input type="text" wicket:id="serviceName"/>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label>Host: </label>
-                </td>
-                <td>
-                    <input type="text" wicket:id="host"/>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label>Port: </label>
-                </td>
-                <td>
-                    <input type="number" wicket:id="port"/>
-
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <input type="submit"/>
-                </td>
-            </tr>
-        </table>
-    </form>
-
-
+    <div class="col-md-3">
+        <wicket:panel wicket:id="loginPanel">[panel]</wicket:panel>
+    </div>
 </wicket:extend>
