initial webapp xwadl rendering;  XmppService is holding the connections --> decoupling of xmpp connection and web session

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/DiscoverItemsPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/DiscoverItemsPage.html
@@ -30,13 +30,13 @@
                     <wicket:container wicket:id="radioGroup">
                         <div wicket:id="radioView" class="radio">
                             <label>
-                                <input wicket:id="radioItem" type="radio" name="ticker"/>
+                                <input wicket:id="radioItem" type="radio" required />
                                 <wicket:container wicket:id="radioLabel"/>
                             </label>
                         </div>
                     </wicket:container>
                 </div>
-                <button type="submit" class="btn btn-default">Connect</button>
+                <button wicket:id="connectBtn" type="submit" class="btn btn-default">Connect</button>
             </form>
         </div>
     </div>
