xwadl page - path vs. resource path

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
@@ -13,7 +13,7 @@
             <div class="form-group col-md-10">
                 <div class="input-group">
                     <div wicket:id="domain" class="input-group-addon">[domain]</div>
-                    <input wicket:id="path" type="text" class="form-control" placeholder="Path">
+                    <input wicket:id="resourcePath" type="text" class="form-control" placeholder="Path">
                 </div>
             </div>
             <div class="form-group col-md-2">
