XmppService should not login after reconnect

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div class="form-group col-md-2">
-                <button wicket:id="getXwadlBtn" type="submit" class="btn btn-block btn-default">Get Xwadl</button>
+                <button wicket:id="getXwadlBtn" type="submit" class="btn btn-block btn-default">Get XWADL</button>
             </div>
         </form>
     </div>
