--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/LoginPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/LoginPanel.html
@@ -13,30 +13,22 @@
 
             <div wicket:id="loginAlert"/>
 
-            <form class="form-horizontal" wicket:id="loginForm">
-
+            <form wicket:id="loginForm">
                 <div class="form-group">
-                    <label for="username" class="col-sm-4 control-label">Jabber ID</label>
-
-                    <div class="col-sm-8">
+                    <label for="username" class="control-label">Jabber ID</label>
+                    <div>
                         <input type="text" class="form-control" id="username" placeholder="Jabber ID"
                                wicket:id="username">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="col-sm-4 control-label">Password</label>
-
-                    <div class="col-sm-8">
+                    <label for="password" class="control-label">Password</label>
+                    <div>
                         <input type="password" class="form-control" id="password" placeholder="Password"
                                wicket:id="password">
                     </div>
                 </div>
-
-                <div class="form-group">
-                    <div class="col-sm-offset-4 col-sm-8">
-                        <button type="submit" class="btn btn-primary btn-block" wicket:id="loginBtn">Sign in</button>
-                    </div>
-                </div>
+                <button type="submit" class="btn btn-primary" wicket:id="loginBtn">Sign in</button>
             </form>
 
         </div>
