--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/nav/NavStackedPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/nav/NavStackedPanel.html
@@ -6,7 +6,7 @@
 <wicket:panel>
 
     <ul class="nav nav-pills nav-stacked">
-        <li role="presentation" wicket:id="navItems"><a wicket:id="navLink">[nav_items]</a></li>
+            <li role="presentation" wicket:id="navItems"><a wicket:id="navLink">[nav_link]</a></li>
     </ul>
 
 </wicket:panel>
