simple rendering of kind attributes (fails if no kind classification is given)

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
@@ -23,6 +23,10 @@
     </div>
 
     <div class="row">
+        <div class="col-md-6" wicket:id="kindPanel"/>
+    </div>
+
+    <div class="row">
         <div class="col-md-12">
             <pre>
                 <code wicket:id="xwadlCode">[xwadl]</code>
