--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/KindPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/KindPanel.html
@@ -5,9 +5,7 @@
 
 <wicket:panel>
     <form wicket:id="kindForm">
-        <div wicket:id="attributeList" class="form-group">
-            <wicket:panel wicket:id="attributeInput"></wicket:panel>
-        </div>
+        <wicket:panel wicket:id="attributePanel"/>
         <button wicket:id="kindSubmit" type="submit" class="btn btn-default">TEST</button>
     </form>
 </wicket:panel>
