--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/AttributeBooleanInput.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/AttributeBooleanInput.html
@@ -4,7 +4,7 @@
 <body>
 
 <wicket:extend>
-    <input wicket:id="attributeValue" type="number" class="form-control" >
+    <input wicket:id="attributeValue" type="checkbox" >
 </wicket:extend>
 
 </body>
