Example Page: XMPP Rest Method Selection (Draft)

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
@@ -21,6 +21,47 @@
             </form>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h2>XMPP Rest Method Selection</h2>
+        </div>
+        <div class="col-md-6">
+            <div class="well">
+                <table class="table table-noborder">
+                    <tr>
+                        <td>Documentation:</td>
+                        <td>This method creates a new virtual machine.</td>
+                    </tr>
+                    <tr>
+                        <td>Request Media Type:</td>
+                        <td>xml/occi</td>
+                    </tr>
+                    <tr>
+                        <td>Resonse Media Type:</td>
+                        <td>text/uri</td>
+                    </tr>
+
+                    <tr>
+                        <td><a class="btn btn-success">GET</a> </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><a class="btn btn-info">POST</a> </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><a class="btn btn-warning">PUT</a> </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><a class="btn btn-danger">DELETE</a> </td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
 </wicket:extend>
 
 </body>
