--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
@@ -26,6 +26,8 @@
         <div class="col-md-12">
             <h2>XMPP Rest Method Selection</h2>
         </div>
+    </div>
+    <div class="row">
         <div class="col-md-6">
             <div class="well">
                 <table class="table table-noborder">
@@ -43,23 +45,59 @@
                     </tr>
 
                     <tr>
-                        <td><a class="btn btn-success">GET</a> </td>
+                        <td><a class="btn btn-success">GET</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a class="btn btn-info">POST</a> </td>
+                        <td><a class="btn btn-info">POST</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a class="btn btn-warning">PUT</a> </td>
+                        <td><a class="btn btn-warning">PUT</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a class="btn btn-danger">DELETE</a> </td>
+                        <td><a class="btn btn-danger">DELETE</a></td>
                         <td></td>
                     </tr>
                 </table>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <table class="table table-striped">
+                <tr>
+                    <th>Method</th>
+                    <th>Documentation</th>
+                    <th>Request</th>
+                    <th>Response</th>
+                </tr>
+                <tr>
+                    <td><a class="btn btn-info">POST</a></td>
+                    <td>This method creates a new virtual machine.</td>
+                    <td>xml/occi</td>
+                    <td>text/uri</td>
+                </tr>
+                <tr>
+                    <td><a class="btn btn-success">GET</a></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><a class="btn btn-warning">PUT</a></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><a class="btn btn-danger">DELETE</a></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
         </div>
     </div>
 </wicket:extend>
