--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
@@ -23,6 +23,10 @@
     </div>
 
     <div class="row">
+        <div class="col-md-12" wicket:id="methodTablePanel"/>
+    </div>
+
+    <div class="row">
         <div class="col-md-6" wicket:id="kindPanel"/>
     </div>
 
