--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
@@ -100,6 +100,62 @@
             </table>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h2>OCCI Representation</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <table class="table table-noborder">
+                        <tr>
+                            <td>type</td>
+                            <td>kind</td>
+                        </tr>
+                        <tr>
+                            <td>term</td>
+                            <td>compute</td>
+                        </tr>
+                        <tr>
+                            <td>schema</td>
+                            <td>http://schema.ogf.org/occi/infrastructure#</td>
+                        </tr>
+                        <tr>
+                            <td>title</td>
+                            <td>some title</td>
+                        </tr>
+                        <tr>
+                            <td>template</td>
+                            <td>
+                                <select>
+                                    <option value="null">NONE</option>
+                                    <option value="1">template 1</option>
+                                    <option value="2">template 2</option>
+                                    <option value="3">template 3</option>
+                                    <option value="4">template 4</option>
+                                </select>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <div class="form-group">
+
+                        <div>
+                            <label>Datetime*</label>
+
+                            <div class="form-label">This is an Example for a Datetime AttributeModel.</div>
+                        </div>
+
+                        <input type="text" class="form-control" value="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </wicket:extend>
 
 </body>
