--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/GetXwadlPage.html
@@ -43,6 +43,12 @@
 
     <div class="row">
         <div class="col-md-12">
+            <wicket:panel wicket:id="requestModelPanel"/>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
             <pre>
                 <code wicket:id="code">[xwadl]</code>
             </pre>
