--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
@@ -10,14 +10,14 @@
 
     <div class="row">
         <form wicket:id="xwadlForm">
-            <div class="form-group col-md-10">
+            <div class="form-group col-md-12">
                 <div class="input-group">
                     <div wicket:id="domain" class="input-group-addon">[domain]</div>
                     <input wicket:id="resourcePath" type="text" class="form-control" placeholder="Path">
+                    <div class="input-group-btn">
+                        <button wicket:id="getXwadlBtn" type="submit" class="btn btn-block btn-default">Get XWADL</button>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group col-md-2">
-                <button wicket:id="getXwadlBtn" type="submit" class="btn btn-block btn-default">Get XWADL</button>
             </div>
         </form>
     </div>
