rendering of response type text/uri + text/uri-list

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
@@ -112,6 +112,12 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            <wicket:panel wicket:id="uriResponsePanel"/>
+        </div>
+    </div>
+
 </wicket:extend>
 
 </body>
