--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
@@ -43,7 +43,10 @@
 
     <div class="row">
         <div class="col-md-12">
-            <wicket:panel wicket:id="requestModelPanel"/>
+            <wicket:panel wicket:id="requestPanel"/>
+        </div>
+        <div class="col-md-12">
+            <wicket:panel wicket:id="responsePanel"/>
         </div>
     </div>
 
