link selection in occi request panel

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
@@ -15,7 +15,9 @@
                     <div wicket:id="domain" class="input-group-addon">[domain]</div>
                     <input wicket:id="resourcePath" type="text" class="form-control" placeholder="Path">
                     <div class="input-group-btn">
-                        <button wicket:id="getXwadlBtn" type="submit" class="btn btn-default">Get XWADL</button>
+                        <button wicket:id="getXwadlBtn" type="submit" class="btn btn-default">
+                            <span class="glyphicon glyphicon-save-file"></span> Get
+                        </button>
                     </div>
                 </div>
             </div>
