--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/OcciRequestPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/OcciRequestPanel.html
@@ -9,6 +9,13 @@
     <wicket:container wicket:id="mixinContainer">
         <wicket:panel wicket:id="mixinPanel"/>
     </wicket:container>
+
+    <div style="margin-bottom: 20px">
+        <form wicket:id="linkForm">
+            <button wicket:id="addLink" type="submit" class="btn btn-default">Add Link</button>
+            <select wicket:id="linkSelect"></select>
+        </form>
+    </div>
 </wicket:panel>
 
 </body>
