--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/CategoryRequestPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/CategoryRequestPanel.html
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns:wicket="http://wicket.apache.org">
-<head/>
-<body>
-
-<wicket:panel>
+<wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div class="panel panel-default">
         <div class="panel-body" wicket:id="container">
             <table class="table table-noborder">
@@ -19,11 +15,11 @@
                     <td>Schema</td>
                     <td wicket:id="schema"></td>
                 </tr>
-                <tr>
+                <tr wicket:id="titleRow">
                     <td>Title</td>
                     <td wicket:id="title"></td>
                 </tr>
-                <tr>
+                <tr wicket:id="templatesRow">
                     <td>template</td>
                     <td><select wicket:id="templates"></select></td>
                 </tr>
@@ -33,6 +29,3 @@
         </div>
     </div>
 </wicket:panel>
-
-</body>
-</html>
