--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/LoginPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/LoginPanel.html
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns:wicket="http://wicket.apache.org">
-<head/>
-<body>
-
-<wicket:panel>
+<wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div class="panel panel-default">
 
         <div class="panel-heading">
@@ -34,6 +30,3 @@
         </div>
     </div>
 </wicket:panel>
-
-</body>
-</html>
