display Mixin applies and Link target/relation

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/CategoryRequestPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/CategoryRequestPanel.html
@@ -24,6 +24,7 @@
                     <td><select wicket:id="templates"></select></td>
                 </tr>
             </table>
+            <wicket:child/>
 
             <wicket:panel wicket:id="attributePanel"/>
         </div>
