--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
@@ -47,7 +47,10 @@
 
     <div class="row">
         <div class="col-md-12">
-            <wicket:panel wicket:id="requestPanel"/>
+            <form wicket:id="requestForm">
+                <wicket:panel wicket:id="requestPanel"/>
+                <button wicket:id="requestSubmit" type="submit" class="btn btn-danger">Submit</button>
+            </form>
         </div>
         <div class="col-md-12">
             <wicket:panel wicket:id="responsePanel"/>
