--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/ExamplePage.html
@@ -15,6 +15,7 @@
             <h2>Attribute Input Form</h2>
         </div>
         <div class="col-md-6">
+            <div wicket:id="feedback"/>
             <form wicket:id="attributeForm">
                 <wicket:panel wicket:id="attributePanel"/>
                 <button wicket:id="attributeSubmit" type="submit" class="btn btn-default">Test</button>
