execute occi request

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
@@ -53,7 +53,9 @@
             </form>
         </div>
         <div class="col-md-12">
-            <wicket:panel wicket:id="responsePanel"/>
+            <div wicket:id="responseContainer">
+                <div wicket:id="responsePanel"/>
+            </div>
         </div>
     </div>
 
