convert occi list representation to xml; added reqeust rest xml to debug dialog; review form validation behavior

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
@@ -86,9 +86,14 @@
                         <code wicket:id="xwadlCode"/>
                     </pre>
 
-                    <h5>REST XML</h5>
+                    <h5>REST Request</h5>
                     <pre>
-                        <code wicket:id="restCode"/>
+                        <code wicket:id="restRequestCode"/>
+                    </pre>
+
+                    <h5>REST Response</h5>
+                    <pre>
+                        <code wicket:id="restResponseCode"/>
                     </pre>
                 </div>
             </div>
