--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
@@ -5,6 +5,12 @@
 
 <wicket:extend>
     <div class="row">
+        <div class="col-md-12">
+            <wicket:panel wicket:id="breadcrumb"/>
+        </div>
+    </div>
+
+    <div class="row">
         <form wicket:id="xwadlForm">
             <div class="form-group col-md-12">
                 <div class="input-group">
