Generic Input Panels for different Types to replace Attribute Input

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/request/AttributeInputPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/request/AttributeInputPanel.html
@@ -7,6 +7,7 @@
     <div>
         <label wicket:id="attributeName">[attribute_label]</label>
         <div wicket:id="attributeDescription" class="form-label">[attribute_description]</div>
+        <wicket:panel wicket:id="inputPanel"/>
     </div>
     <wicket:child/>
 </wicket:panel>
