--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
@@ -42,7 +42,7 @@
                     <th>Response</th>
                 </tr>
                 <tr wicket:id="methodList">
-                    <td><a wicket:id="method" class="btn btn-default"></a></td>
+                    <td><a wicket:id="methodLink" class="btn btn-default"></a></td>
                     <td wicket:id="documentation"></td>
                     <td wicket:id="request"></td>
                     <td wicket:id="response"></td>
