plugins to add Panels for certain IRepresentationModels

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/BrowserPage.html
@@ -58,10 +58,8 @@
                 <button wicket:id="requestSubmit" type="submit" class="btn btn-danger">Submit</button>
             </form>
         </div>
-        <div class="col-md-12">
-            <div wicket:id="responseContainer">
+        <div class="col-md-12" wicket:id="responseContainer">
                 <div wicket:id="responsePanel"/>
-            </div>
         </div>
     </div>
 
