--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/response/CategoryResponsePanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/response/CategoryResponsePanel.html
@@ -2,19 +2,19 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <table class="table table-striped">
         <tr>
-            <td>Type</td>
+            <td><b>Type</b></td>
             <td colspan="2" wicket:id="type"></td>
         </tr>
         <tr>
-            <td>Term</td>
+            <td><b>Term</b></td>
             <td colspan="2" wicket:id="term"></td>
         </tr>
         <tr>
-            <td>Schema</td>
+            <td><b>Schema</b></td>
             <td colspan="2" wicket:id="schema"></td>
         </tr>
         <tr wicket:id="titleRow">
-            <td>Title</td>
+            <td><b>Title</b></td>
             <td colspan="2" wicket:id="title"></td>
         </tr>
 
