--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/action/ParameterInputPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/action/ParameterInputPanel.html
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns:wicket="http://wicket.apache.org">
-<head/>
-<body>
-
-<wicket:panel>
+<wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div>
         <label wicket:id="parameterName"/>
         <div wicket:id="parameterDocumentation" class="form-label"/>
         <wicket:panel wicket:id="inputPanel"/>
     </div>
-    <wicket:child/>
 </wicket:panel>
-
-</body>
-</html>
