--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/browser/ActionRequestPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/browser/ActionRequestPanel.html
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <form wicket:id="requestForm">
-        <wicket:panel wicket:id="parameterList"/>
-        <button wicket:id="requestSubmit" type="submit" class="btn btn-danger">Submit</button>
+        <div class="well">
+            <wicket:panel wicket:id="parameterList"/>
+            <button wicket:id="requestSubmit" type="submit" class="btn btn-danger">Submit</button>
+        </div>
     </form>
 </wicket:panel>
