--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/method/request/AttributeInputPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/method/request/AttributeInputPanel.html
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns:wicket="http://wicket.apache.org">
-<head/>
-<body>
-
-<wicket:panel>
+<wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div>
         <label wicket:id="attributeName">[attribute_label]</label>
         <div wicket:id="attributeDescription" class="form-label">[attribute_description]</div>
@@ -11,6 +7,3 @@
     </div>
     <wicket:child/>
 </wicket:panel>
-
-</body>
-</html>
