--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/action/ParameterListInputPanel.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/panels/action/ParameterListInputPanel.html
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns:wicket="http://wicket.apache.org">
-<head/>
-<body>
-
-<wicket:panel>
+<wicket:panel xmlns:wicket="http://wicket.apache.org">
         <div wicket:id="parameterList" class="form-group">
             <wicket:panel wicket:id="parameterInput"></wicket:panel>
         </div>
 </wicket:panel>
-
-</body>
-</html>
