--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/DiscoverPage.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/pages/DiscoverPage.html
@@ -9,7 +9,9 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12" wicket:id="alert"/>
+        <div class="col-md-12">
+            <div wicket:id="alert"/>
+        </div>
     </div>
 
     <div class="row">
